[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint=[]
test-sbf=[]


[dependencies]
solana-program = "2.0.9"

[dev-dependencies]
solana-program-test = "2.0.9"
solana-sdk = "2.0.9"


[lib]
crate-type=['cdylib', 'lib']
